--- a/gps-react-app/src/pages/Product/ApplicationCss.css
+++ b/gps-react-app/src/pages/Product/ApplicationCss.css
@@ -1,49 +1,98 @@
-.container {
-    margin : 0px;
-    padding: 0px;
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: 10% 80% 10%;
-    grid-template-rows: auto auto auto auto;
-    grid-template-areas:
-        "left basic_Info right"
-        "left images right"
-        "left reviews right"
-        "left other_Info right";
-    grid-column-gap: 10px;
+@media {
+    .container {
+        display: grid;
+        grid-template-rows: auto auto auto auto;
+        grid-gap: 10px;
+        margin : 0px;
+        padding: 0px;
+        width: 100%;
+        height: 100%;
+        grid-column-gap: 10px;
+    }
 }
 
 /*layer 1*/
 .basic_Info {
-    content: "";
-    clear: both;
-    display: table;
+    display: table-row;
+}
+.InputIcon {
+    font-size: 20px;
+    font-weight: bold;
+}
+.AddIcon {
+    font-size: 20px;
+    font-weight: bold;
+}
+.icon{
+    width: 40px;
+    height: 40px;
 }
 
+.InputTitle {
+    font-size: 40px;
+    font-weight: bold;
+    margin-block-end: 0px;
+    margin-block-start: 10px;
+}
+hr.line {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-top: 1px lightgray;
+    border-left: transparent;
+    border-right: transparent;
+}
 /*layer 2*/
 .images {
-    content: "";
-    clear: both;
-    display: table;
+    display: table-row;
 }
 .image {
     float: left;
     width: auto;
-    padding: 5px;
+}
+.AddImage {
+    font-size: 20px;
+    font-weight: bold;
+}
+.InputImage {
+    font-size: 15px;
 }
 
 /*layer 3*/
-
 .reviews {
-     content: "";
-     clear: both;
-     display: table;
- }
+    display: table-row;
+}
 
 /*layer 4*/
 .other_Info {
-      content: "";
-      clear: both;
-      display: table;
-  }
+    display: table;
+}
+.DescriptionText{
+    font-size: 20px;
+    font-weight: bold;
+    margin-block-end: 0px;
+    margin-block-start: 10px;
+}
+.description {
+    width: 100%;
+    padding-bottom: 100px ;
+    font-size: 10px;
+}
+
+.button{appearance: auto;
+    writing-mode: horizontal-tb !important;
+    text-rendering: auto;
+    letter-spacing: normal;
+    word-spacing: normal;
+    line-height: normal;
+    text-transform: none;
+    text-indent: 0px;
+    text-shadow: none;
+    display: inline-block;
+    text-align: center;
+    align-items: flex-start;
+    cursor: default;
+    margin: 0em;
+    padding: 1px 6px;
+    border-width: 2px;
+    border-style: outset;
+    border-image: initial;}
