--- a/gps-react-app/src/pages/Product/ApplicationCss.css
+++ b/gps-react-app/src/pages/Product/ApplicationCss.css
@@ -2,10 +2,11 @@
 
 @media {
     .container {
+        margin-left: 5%;
+        margin-right: 5%;
         display: grid;
         grid-template-rows: auto auto auto auto;
         grid-gap: 10px;
-        margin : 0px;
         padding: 0px;
         width: 100%;
         height: 100%;
@@ -29,7 +30,6 @@
     width: 40px;
     height: 40px;
 }
-
 .InputTitle {
     font-size: 40px;
     font-weight: bold;
@@ -43,6 +43,7 @@ hr.line {
     border-left: transparent;
     border-right: transparent;
 }
+
 /*layer 2*/
 .images {
     display: table-row;
@@ -50,12 +51,24 @@ hr.line {
 .image {
     float: left;
     width: auto;
+    border: 5px solid lightgray;
+    margin-left: 5px;
 }
 .AddImage {
-    font-size: 20px;
-    font-weight: bold;
+    float: left;
+    position: center;
+    display: inline-block;
+    width: auto;
+    text-align: center;
+    align-items: center;
+    height: 339px;
+    width: 500px;
+    border: 5px solid lightgray;
 }
-.InputImage {
+.AddImageButton{
+
+}
+.RemoveImage {
     font-size: 15px;
 }
 
@@ -75,7 +88,14 @@ hr.line {
     margin-block-start: 10px;
 }
 .description {
-    width: 100%;
+    width: 90%;
     padding-bottom: 100px ;
-    font-size: 10px;
+    font-size: 20px;
+}
+
+.SaveButton{
+    width: 90%;
+    font-size: 30px;
+    background-color: white;
+    outline: red;
 }
