some css and data

--- a/gps-react-app/src/App.css
+++ b/gps-react-app/src/App.css
@@ -35,3 +35,8 @@
     right: 0;
     background-color: black;
 }
+
+.AppDownloads{
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
