--- a/gps-react-app/src/App.css
+++ b/gps-react-app/src/App.css
@@ -11,7 +11,7 @@
     margin-left:15%;
     margin-right: auto;
     padding-top: 30px;
-    margin-bottom: -80px;
+    margin-bottom: -70px;
 }
 .footerRight{
     margin-left: auto;
@@ -25,6 +25,8 @@
 .block{
     display: block;
     text-align: right;
+    margin-top: 4px;
+    margin-bottom: 8px;
 }
 
 /*Header*/
