--- a/gps-react-app/src/pages/Product/ApplicationCss.css
+++ b/gps-react-app/src/pages/Product/ApplicationCss.css
@@ -1,3 +1,7 @@
+* {
+    font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+}
+
 @media {
     .container {
         display: grid;
