--- a/gps-react-app/src/App.css
+++ b/gps-react-app/src/App.css
@@ -46,5 +46,5 @@
 /*Statistics*/
 .AppDownloads{
     display: grid;
-    grid-template-columns: 25% 25% 25%;
+    grid-template-columns: 7% 10% 30% auto;
 }
