--- a/gps-react-app/src/components/Creator/AppDetails/AppDetails.css
+++ b/gps-react-app/src/components/Creator/AppDetails/AppDetails.css
@@ -135,3 +135,9 @@
     margin: 0;
     display: block;
 }
+.versions{
+    font-size: 18px;
+    width: 280px;
+    margin: 0;
+    display: block;
+}
