--- a/gps-react-app/src/App.css
+++ b/gps-react-app/src/App.css
@@ -35,7 +35,7 @@
 
 /*Header*/
 .Header{
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
@@ -125,7 +125,6 @@
     padding: 10px;
     transition: 0.5s;
 }
-
 .add-button a:hover{
     color: #444;
     background: #fafafa;
