--- a/gps-react-app/src/pages/Product/ApplicationCss.css
+++ b/gps-react-app/src/pages/Product/ApplicationCss.css
@@ -3,27 +3,70 @@
         display: grid;
         grid-template-rows: auto auto auto auto;
         grid-gap: 10px;
-        margin : 0px;
         padding: 0px;
-        width: 100%;
+        width: 80%;
+        margin-left: 10%;
+        margin-right: 10%;
         height: 100%;
         grid-column-gap: 10px;
     }
 }
+input[type="file"] {
+    display: none;
+}
 
 /*layer 1*/
-.basic_Info {
-    display: table-row;
+.buttonsLeft{
+    float: right;
 }
-.addIconButton{
-    display: inline-block;
+.DoneButton {
+    margin-left: 15px;
     transition: 0.5s;
-    margin-left: 20px;
-    background-color: rgba(68, 68, 68, 0.70);
+    color: white;
+    background-color: rgb(75, 216, 100);
     text-align: center;
-;
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    border: 0px solid #444;
+    border-radius: 20px;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    display: inline-block;
+
+}
+.PreviewButton {
+    margin-left: 15px;
+    color: white;
+    background-color: rgb(19, 101, 245);
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 20px;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    border: 0px solid #444;
+    transition: 0.5s;
+    display: inline-block;
+}
+.name{
+    display: inline-block;
+    margin-left: 20px;
+    margin-top: 5px;
+    font-size: 40px;
+}
+hr.topLine {
+    margin-top: -30px;
+    padding-bottom: 5px;
+    border-top: 1px lightgray;
+    border-left: transparent;
+    border-right: transparent;
 }
 .icon{
+    border-radius: 10px;
     width: 50px;
     height: 50px;
     display: inline-block;
@@ -31,11 +74,9 @@
     margin-left: 30px;
 }
 
-.InputTitle {
-    font-size: 40px;
-    font-weight: bold;
-    margin-block-end: 0px;
-    margin-block-start: 10px;
+/*layer 2*/
+.basic_Info {
+    display: table-row;
 }
 hr.line {
     padding-top: 5px;
@@ -45,17 +86,126 @@ hr.line {
     border-right: transparent;
 }
 
-/*layer 2*/
+.IconLabel{
+    position: absolute;
+    display: inline-block;
+    margin: 5px;
+    margin-left: 20px;
+    font-size: 20px;
+}
+.addIconButton{
+    display: inline-block;
+    transition: 0.5s;
+    background-color: rgba(68, 68, 68, 0.70);
+    text-align: center;
+    margin-left: 20px;
+;
+}
+.BigIcon{
+    border-radius: 25px;
+    display: inline-block;
+    width: 150px;
+    height: 150px;
+    margin-left: 80px;
+}
+.Add-Icon {
+    position: absolute;
+    margin-left: -135px;
+    margin-top: 100px;
+    transition: 0.5s;
+    color: white;
+    background-color: rgb(253, 56, 35);
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    border: 0px solid #444;
+    border-radius: 20px;
+    padding: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+.IconLoading{
+    position: absolute;
+    margin-left: 20px;
+    display: inline-block;
+}
+
+/*layer 3*/
+.nameLabel{
+    display: inline-block;
+    margin: 5px;
+    margin-left: 20px;
+    font-size: 20px;
+}
+.InputTitle {
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 20px;
+    border: 1px;
+    background-color: #eaeaea;
+    margin-block-end: 0px;
+    margin-block-start: 10px;
+    display: inline-block;
+}
+
+/*layer 4*/
+.add-Screenshots{
+    margin-top: -20px;
+    margin-left: 20px;
+}
+.screenshotLabel{
+    display: inline-block;
+}
+.Add-screenshot {
+    margin-left: 15px;
+    color: white;
+    background-color: rgb(19, 101, 245);
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 20px;
+    padding: 5px;
+    padding-left: 50px;
+    padding-right: 50px;
+    border: 0px solid #444;
+    transition: 0.5s;
+    display: inline-block;
+}
+.ScreenshotLoading{
+    margin-left: 20px;
+    display: inline-block;
+}
+
 .images {
-    display: table-row;
+    line-break: auto;
+    display: inline;
 }
 .image {
+    display: inline-block;
     float: left;
-    width: auto;
+    width: 400px;
+    height: 333px;
     margin-left: 15px;
+    margin-top: -10px;
 }
-.InputImage {
-    font-size: 15px;
+.RemoveImage{
+    position: absolute;
+    margin-left: -370px;
+    margin-top: 280px;
+    transition: 0.5s;
+    color: white;
+    background-color: rgb(253, 56, 35);
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    cursor: pointer;
+    border: 0px solid #444;
+    border-radius: 20px;
+    padding: 10px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 /*layer 3*/
@@ -68,77 +218,48 @@ hr.line {
     display: table;
 }
 .DescriptionText{
-    font-size: 30px;
-    font-weight: bold;
-    margin-block-end: 0px;
-    margin-block-start: 10px;
+    font-size: 20px;
+    margin-left: 20px;
+    margin-top: -5px;
+    margin-bottom: -7px;
 }
-.description {
+.Description {
     width: 100%;
     padding-bottom: 100px ;
     font-size: 20px;
-}
-
-.deleteButton{
-    transition: 0.5s;
-    background-color: rgba(68, 68, 68, 0.70);
-    margin-left: -70px;
-
-}
-.deleteButton:hover{
-    color: #444;
-    background: #fafafa;
-    transition: 0.5s;
-}
-
-.button{appearance: auto;
-    writing-mode: horizontal-tb !important;
-    text-rendering: auto;
-    letter-spacing: normal;
-    word-spacing: normal;
-    line-height: normal;
-    text-transform: none;
-    text-indent: 0px;
-    text-shadow: none;
+    font-weight: bold;
+    border-radius: 20px;
+    border: 1px;
+    background-color: #eaeaea;
+    margin-block-end: 0px;
+    margin-block-start: 10px;
     display: inline-block;
-    text-align: center;
-    align-items: flex-start;
-    cursor: default;
-    margin: 0em;
-    padding: 1px 6px;
-    border-width: 2px;
-    border-style: outset;
-    border-image: initial;}
+    margin-left: 20px;
+}
 
-.addImageButton{
-    height: 305px;
-    width: 450px;
-    align-items: center;
+.AppLoading{
     display: inline-block;
-    float: left;
     margin-left: 15px;
-    transition: 0.5s;
-    background-color: rgba(68, 68, 68, 0.70);
-    margin-top: 38px;
-    text-align: center;
 }
-
-.addAppButton{
+.AppLabel{
+    margin-top: -25px;
+    margin-bottom: -25px;
     display: inline-block;
-    float: left;
-    margin-left: 15px;
-    transition: 0.5s;
-    background-color: rgba(68, 68, 68, 0.70);
+    margin-left: 20px;
 }
-
-.deleteButton , .deleteButton:visited, .addImageButton , .addImageButton:visited, .addIconButton , .addIconButton:visited, .addAppButton, .addAppButton:visited{
+.Add-app{
+    margin-left: 15px;
+    color: white;
+    background-color: rgb(19, 101, 245);
+    text-align: center;
     text-decoration: none;
-    color: #fafafa;
     outline: none;
     cursor: pointer;
-    background-color: rgba(68, 68, 68, 0.50);
-    border: 1px solid #444;
     border-radius: 20px;
-    padding: 10px;
+    padding: 5px;
+    padding-left: 50px;
+    padding-right: 50px;
+    border: 0px solid #444;
     transition: 0.5s;
+    display: inline-block;
 }
