--- a/gps-react-app/src/App.css
+++ b/gps-react-app/src/App.css
@@ -2,15 +2,21 @@
     font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
 }
 
+a {
+    outline: none;
+    text-decoration: none;
+}
+
 /*Footer*/
-.footer{
+.footer {
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: black;
+    background-color: #000;
 
 }
+
 .footerLeft{
     margin-left:15%;
     margin-right: auto;
@@ -31,11 +37,11 @@
     text-align: right;
     margin-top: 4px;
     margin-bottom: 8px;
-}
+} 
 
 /*Header*/
 .Header{
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     right: 0;
@@ -125,7 +131,6 @@
     padding: 10px;
     transition: 0.5s;
 }
-
 .add-button a:hover{
     color: #444;
     background: #fafafa;
