--- a/gps-react-app/src/styles/App.css
+++ b/gps-react-app/src/styles/App.css
@@ -1,5 +1,22 @@
 * {
-    font-family: "SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+    font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+    margin: 0;
+}
+
+.Body {
+    flex: 1;
+    min-height: 0;
+    margin-top: 44px;
+    margin-left: 17%;
+    margin-right: 17%;
+    padding-bottom: 5rem;
+}
+
+.Html {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    min-height: 100vh;
 }
 
 a {
@@ -7,133 +24,121 @@ a {
     text-decoration: none;
 }
 
-/*Footer*/
-.footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #000;
 
-}
 
-.footerLeft{
-    margin-left:15%;
-    margin-right: auto;
-    padding-top: 30px;
-    margin-bottom: -70px;
-}
-.footerRight{
-    margin-left: auto;
-    margin-right: 15%;
-    color: darkgrey;
-}
-.inline-block{
-    display: inline-block;
-    padding-left: 50px;
-}
-.block{
-    display: block;
-    text-align: right;
-    margin-top: 4px;
-    margin-bottom: 8px;
-} 
-
-/*Header*/
-.Header{
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: black;
-}
+/* Header */
 .Nav {
+    overflow: hidden;
+    background-color: black;
+    position: fixed;
+    height: 44px;
     top: 0;
     left: 0;
     right: 0;
-    background-color: black;
-    height: 60px;
+    padding: 0 17% 0 17%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 12;
 }
+
 .NavLogo {
-    margin-left: 15%;
     cursor: pointer;
-    color: #fff;
-    font-size: 2rem;
-    text-decoration: none;
-    margin-top: 8px;
+    margin-right: 3%;
 }
-.NavLink {
+
+.NavLink, .NavTranslate, .NavProfile, .NavDropdown .dropdown-button, .dropdown-content a {
     color: darkgrey;
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    height: 100%;
-    cursor: pointer;
+    font-size: 15px;
+    font-weight: normal;
+    transition: 0.3s;
+    margin: 0 3% 0 3%;
 }
-.NavLink:hover {
+
+.NavLink:hover, .NavTranslate:hover, .NavProfile:hover, .NavDropdown .dropdown-button:hover, .dropdown-content a:hover {
     color: white;
 }
-.NavMenu {
-    display: flex;
-    align-items: center;
-    margin-right: 10%;
+
+.NavTranslate {
+    cursor: pointer;
+    margin-left: auto;
 }
-.NavBtn {
-    display: flex;
-    align-items: center;
+
+.NavIcon {
+    padding-left: 5px;
 }
-.NavBtnLink {
-    border-radius: 4px;
-    background: transparent;
-    padding: 10px 22px;
+
+.NavDropdown {
+    margin-right: 0;
+}
+
+.NavDropdown .dropdown-button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background-color: inherit;
+    margin: 0;
+}
+
+.dropdown-content {
+    display: none;
+    position: fixed;
+    margin-top: 15px;
+    padding: 15px;
+    background-color: black;
+    min-width: 6%;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-content a {
+    float: none;
+    padding-bottom: 10px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content hr {
+    border: 0.5px solid dimgrey;
+}
+
+.dropdown-content a:last-child {
+    padding-top: 10px;
+    padding-bottom: 0;
+}
+
+.show {
+    display: block;
+}
+
+
+
+/* Footer */
+.footer {
+    position: absolute;
+    height: 5rem;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 15px 17%;
+    background-color: black;
+}
+
+.footer .copyright {
+    cursor: default;
+    color: dimgrey;
+    font-size: xx-small;
+    font-weight: normal;
+}
+
+.footer p {
+    cursor: pointer;
+    color: dimgrey;
+    font-size: 15px;
+    font-weight: normal;
+    transition: 0.3s;
+}
+
+footer p:hover {
     color: darkgrey;
-    outline: none;
-    border: 1px solid darkgrey;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-    text-decoration: none;
 }
-.NavBtnLink:hover {
-     transition: all 0.2s ease-in-out;
-     background: black;
-     color: white;
- }
-
-/*Statistics*/
-.AppDownloads{
-    display: grid;
-    grid-template-columns: 7% 10% 30% auto;
-}
-
-/* my apps */
-
-.title {
-    float: left;
-    width: 50%;
-    margin: 0 25px;
-}
-.title-buttons {
-    float: right;
-    margin: 0 25px;
-}
-.add-button a, .add-button a:visited{
-    text-decoration: none;
-    color: #fafafa;
-    outline: none;
-    cursor: pointer;
-    background: #444;
-    border: 1px solid #444;
-    border-radius: 20px;
-    padding: 10px;
-    transition: 0.5s;
-}
-.add-button a:hover{
-    color: #444;
-    background: #fafafa;
-    transition: 0.5s;
-}
-/* end my apps */
