--- a/gps-react-app/src/styles/App.css
+++ b/gps-react-app/src/styles/App.css
@@ -9,7 +9,7 @@
     margin-top: 44px;
     margin-left: 17%;
     margin-right: 17%;
-    padding-bottom: 5rem;
+    padding-bottom: 7rem;
 }
 
 .Html {
@@ -35,7 +35,7 @@ a {
     top: 0;
     left: 0;
     right: 0;
-    padding: 0 17% 0 17%;
+    padding: 0 17%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -46,12 +46,12 @@ a {
     margin-right: 3%;
 }
 
-.NavLink, .NavTranslate, .NavProfile, .NavDropdown .dropdown-button, .dropdown-content a {
+.NavLink, .NavTranslate, .NavProfile, .NavDropdown .dropdown-button {
     color: darkgrey;
     font-size: 15px;
     font-weight: normal;
     transition: 0.3s;
-    margin: 0 3% 0 3%;
+    margin: 0 3%;
 }
 
 .NavLink:hover, .NavTranslate:hover, .NavProfile:hover, .NavDropdown .dropdown-button:hover, .dropdown-content a:hover {
@@ -96,6 +96,10 @@ a {
     text-decoration: none;
     display: block;
     text-align: left;
+    color: darkgrey;
+    font-size: 15px;
+    font-weight: normal;
+    transition: 0.3s;
 }
 
 .dropdown-content hr {
@@ -114,31 +118,74 @@ a {
 
 
 /* Footer */
-.footer {
+footer {
     position: absolute;
+    display: block;
     height: 5rem;
     left: 0;
     right: 0;
     bottom: 0;
     padding: 15px 17%;
     background-color: black;
+    align-items: center;
 }
 
-.footer .copyright {
+footer .row {
+    margin: 0 6%;
+    float: right;
+    display: flex;
+    flex-direction: column;
+}
+
+footer .row:first-child {
+    float: left;
+    align-items: flex-start;
+    margin: 0;
+}
+
+footer .row:nth-child(2) {
+    margin-right: 0;
+}
+
+.socials {
+    align-items: center;
+}
+
+.socials-icon {
+    color: dimgrey;
+    height: 24px;
+    padding: 5px 12px 0 0;
+    transition: 0.3s;
+}
+
+.socials-icon:hover {
+    filter: brightness(1.5);
+}
+
+.socials-icon:last-child {
+    margin-right: 0;
+}
+
+.row .copyright {
     cursor: default;
     color: dimgrey;
     font-size: xx-small;
     font-weight: normal;
 }
 
-.footer p {
-    cursor: pointer;
+.row a {
     color: dimgrey;
     font-size: 15px;
     font-weight: normal;
+    text-align: right;
     transition: 0.3s;
+    padding-bottom: 8px;
 }
 
-footer p:hover {
+.row a:hover {
     color: darkgrey;
+}
+
+.row a:last-child {
+    padding-bottom: 0;
 }
