--- a/gps-react-app/src/styles/Authentication&Authorisation/ErrorPage.css
+++ b/gps-react-app/src/styles/Authentication&Authorisation/ErrorPage.css
@@ -2,7 +2,7 @@
     display: inline-block;
     text-align: center;
     width: 100%;
-    margin-top: 15%;
+    margin-top: 12vh;
 }
 
 .NotFound img {
