--- a/gps-react-app/src/styles/ContentCreator/ApplicationPage.css
+++ b/gps-react-app/src/styles/ContentCreator/ApplicationPage.css
@@ -1,220 +1,215 @@
-/* main structure */
-.app-container {
-    padding-bottom: 14px;
-    padding-top: 20px;
-}
-.app-container div{
+.app {
     display: block;
 }
 
-.sidebar{
-    padding: 20px;
-    width: 20%;
-    float: left;
-}
-.sidebar div{
-    display: block;
+.app-controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.main {
-    float: right;
-    margin-bottom: 20px;
-    width: 75%;
-}
-.main div{
-    display: block;
-}
-.main hr{
-    background: #444;
-    border: 1px solid #444;
-}
-/* end main structure */
-
-/* sidebar */
 .icon {
-    max-height: 128px;
-    max-width: 128px;
-    display: block;
-    margin: 0 0 20px 0;
-}
-
-.sidebar h4{
-    font-size: 1.4em;
-    font-weight: normal;
-    margin: 0.6em 0;
-    display: block;
-    margin-block-start: 1.33em;
-    margin-block-end: 1.33em;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-}
-.sidebar h5{
-    font-size: 1.1em;
-    font-weight: normal;
-    margin: 0.6em 0;
-    display: block;
-    margin-block-start: 1.67em;
-    margin-block-end: 1.67em;
-    margin-inline-start: 0;
-    margin-inline-end: 0;
-}
-
-.sidebar a{
-    color: #0071bc;
-    text-decoration: none;
-    outline: none;
-    cursor: pointer;
-}
-/* end sidebar */
-
-/* start main */
-.app{
-    padding: 20px;
-}
-.app div{
-    display: block;
-}
-
-.app h1{
+    height: 60px;
+    width: 60px;
+    border: 1.2px solid darkgrey;
+    border-radius: 15px;
     margin: 0;
-    padding: 0;
-    display: inline;
-    font-size: 2.6em;
-    font-weight: normal;
-    color: #444;
 }
-.app h2{
-    margin: 0;
-    padding: 0;
-    display: inline;
-    font-size: 1.5em;
+
+.app h1 {
+    color: black;
+    font-size: 40px;
     font-weight: normal;
-    color: #444;
+    margin-left: 10px;
 }
-.button-left{
+
+.edit-button, .delete-button {
+    height: 35px;
+    width: 125px;
+    margin-left: 10px;
+    text-align: center;
+    color: white;
+    font-size: 15px;
+    border-radius: 50px;
+    line-height: 35px;
+    transition: 0.3s;
+}
+
+.edit-button:hover, .delete-button:hover {
+    opacity: 50%;
+}
+
+.edit-button {
+    background-color: royalblue;
+    margin-left: auto;
+}
+
+.delete-button {
+    background-color: red;
+}
+
+.app hr {
+    border: 0.5px solid lightgrey;
+    margin: 10px 0;
+}
+
+.app hr:nth-child(2) {
     margin-bottom: 30px;
 }
-.buttons-left{
-    float: left;
-    margin-top: 20px;
-    margin-bottom: 40px;
-    margin-left: -10px;
-}
-.buttons-left a, .buttons a:visited{
-    text-decoration: none;
-    color: #fafafa;
-    outline: none;
-    cursor: pointer;
-    background: #444;
-    border: 1px solid #444;
-    border-radius: 20px;
-    padding: 10px;
-    transition: 0.5s;
-}
 
-.buttons-left a:hover {
-    color: #444;
-    background: #fafafa;
-    transition: 0.5s;
-}
-.buttons{
-    float: right;
-    margin-top: 20px;
-    margin-right: 15px;
-}
-.buttons a, .buttons a:visited{
-    text-decoration: none;
-    color: #fafafa;
-    outline: none;
-    cursor: pointer;
-    background: #444;
-    border: 1px solid #444;
-    border-radius: 20px;
-    padding: 10px;
-    transition: 0.5s;
-}
-
-.buttons a:hover{
-    color: #444;
-    background: #fafafa;
-    transition: 0.5s;
-}
-/* end main */
-
-/* screenshots */
-.screenshot-list {
-    align-items: center;
-    padding: 0;
-    margin: 0;
+.menu-wrapper {
+    max-width: 100%;
+    height: 300px;
+    overflow-x: hidden;
     overflow-y: hidden;
 }
 
-.screenshot-list li {
-    list-style-type: none;
+.menu {
+    height: 320px;
+    box-sizing: border-box;
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    padding: 0 0 20px 0;
+}
+
+.menu .item {
     display: inline-block;
-    vertical-align: bottom;
+    width: 30em;
+    height: 297px;
+    margin-right: 15px;
 }
 
-.screenshot-list img{
-    max-width: 450px;
-    position: relative;
-    margin: 0;
-    display: block;
+.menu .item:last-child {
+    margin-right: 0;
 }
-.versions{
-    margin-top: -15px;
-    font-size: 18px;
-    width: 280px;
-    display: block;
-}
-.app .reviews{
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20%;
-    grid-gap: 30px;
+
+.menu .item img {
     width: 100%;
-    max-width: 1024px;
-    margin: 0 auto;
+    height: 100%;
+    border-radius: 20px;
 }
-.reviews .card{
-    padding-top: 20px;
-    width: 100%;
-    max-width: 400px;
-    min-width: 200px;
-    height: 100px;
-    background-color: darkgray;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 0px 2px 10px rgba(0,0,0,0.24);
-    border: 2px solid rgba(7,7,7,0.12);
-    font-size: 17px;
-    transition: all 0.3s ease;
-    position: relative;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
+
+/* ARROWS
+.paddle {
     cursor: pointer;
-}
-.card .description{
-    width: 80%;
-    margin: 0 auto;
-    font-size: 13px;
-    text-align: left;
-    transition: all 0.3s ease;
-    opacity: 0;
-}
-.card .text{
-    width: 80%;
-    margin: 0 auto;
-    font-size: 15px;
-    text-align: left;
-    transition: all 0.3s ease;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 30px;
+    background-color: inherit;
+    border: none;
+    color: dodgerblue;
+    transition: 0.3s;
 }
 
-.card:hover{
-    height: 200px;
+.paddle:hover {
+    opacity: 50%;
 }
-.card .description:hover{
-    max-height: 0px;
-    opacity: 1;
+
+.paddle-icon {
+    height: 15px;
+    transform: scale(1,4);
 }
+
+.left-paddle {
+    left: 0;
+}
+
+.right-paddle {
+    right: 0;
+}
+
+.hidden {
+    display: none;
+}
+*/
+
+.app h2{
+    color: black;
+    font-size: 25px;
+    font-weight: bold;
+    margin: 0 15px 10px 0;
+}
+
+.ratings-header {
+    display: flex;
+    align-items: baseline;
+}
+
+.ratings-header .see-all-button {
+    margin: 0;
+}
+
+.overall-rating {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    color: black;
+    font-size: 25px;
+    font-weight: bold;
+    margin-top: -15px;
+}
+
+.overall-rating p {
+    font-family: "Arial Rounded MT Bold", "Helvetica Rounded", "Arial", "sans-serif";
+}
+
+.rating-number {
+    font-size: 75px;
+    margin-right: 10px;
+}
+
+.app-reviews{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px -15px 0;
+}
+
+.review-card{
+    padding: 15px;
+    width: 175px;
+    background-color: lightgrey;
+    border-radius: 20px;
+    display: flex;
+    font-size: 15px;
+    flex-direction: column;
+    margin: 0 15px 15px 0;
+}
+
+.card-title, .card-stars {
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
+}
+
+.card-title .text, .card-stars .stars{
+    font-weight: bold;
+    padding-right: 10px;
+}
+
+.card-title .date, .card-stars .nickname {
+    color: dimgrey;
+    margin-left: auto;
+    text-align: right;
+}
+
+.see-all-button, .review-card .reply-button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background-color: inherit;
+    font-size: 15px;
+    color: dodgerblue;
+    padding: 0;
+    margin: auto 0 0 auto;
+    transition: 0.3s;
+}
+
+.see-all-button:hover, .review-card .reply-button:hover {
+    opacity: 50%;
+}
+
+
 
