--- a/gps-react-app/src/styles/ContentCreator/MyAppsPage/MyAppsPage.css
+++ b/gps-react-app/src/styles/ContentCreator/MyAppsPage/MyAppsPage.css
@@ -89,7 +89,7 @@ select {
 
 .my-apps-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20%, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(15em, 1fr));
     grid-row-gap: 30px;
     grid-column-gap: 30px;
 }
