Analytics Page CSS updated, CSS of all NON-EMPTY pages is finished and responsive, ready for merge

--- a/gps-react-app/src/styles/ContentCreator/AnalyticsPage.css
+++ b/gps-react-app/src/styles/ContentCreator/AnalyticsPage.css
@@ -1,4 +1,117 @@
-.AppDownloads{
+.analytics-controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title {
+    color: black;
+    font-size: 40px;
+    font-weight: normal;
+}
+
+.add-icon {
+    height: 25px;
+    margin: 8px 10px 0 15px;
+    color: red;
+    transition: 0.3s;
+}
+
+.add-icon:hover, .search-button:hover {
+    opacity: 50%;
+}
+
+.month-dropdown, .year-dropdown {
     display: grid;
-    grid-template-columns: 7% 10% 30% auto;
+    grid-template-areas: "select .dropdown-icon";
+    align-items: center;
+    height: 35px;
+    min-width: auto;
+    margin: 8px 0 0 10px;
+    border: 1px solid lightgrey;
+    border-radius: 50px;
+    background-color: red;
+    padding: 0 15px;
+    font-size: 15px;
+    cursor: pointer;
+    line-height: 1.1;
+}
+
+select {
+    appearance: none;
+    background-color: transparent;
+    border: none;
+    margin: 0;
+    height: 35px;
+    width: 100%;
+    font-size: inherit;
+    color: white;
+    cursor: inherit;
+    line-height: inherit;
+    outline: none;
+}
+
+.dropdown-icon {
+    grid-area: dropdown-icon;
+    color: white;
+    padding-left: 10px;
+}
+
+.analytics hr {
+    border: 0.5px solid lightgrey;
+    margin: 15px 0;
+}
+
+.app-downloads {
+    display: grid;
+    grid-template-columns: 105px 15% auto;
+    align-items: center;
+}
+
+.app-downloads img {
+    height: 100px;
+    width: 100px;
+    border: 2px solid darkgrey;
+    border-radius: 25px;
+}
+
+.app-downloads p {
+    margin-left: 10px;
+    word-break: break-word;
+    color: black;
+    font-size: larger;
+    font-weight: normal;
+}
+
+.downloads-graph {
+    margin-left: auto;
+    background-color: #f2f2f2;
+    padding: 15px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.graph-title {
+    font-size: 10px;
+    color: grey;
+}
+
+.graph-numbers {
+    display: flex;
+    align-items: baseline;
+}
+
+.number {
+    font-size: 30px;
+    margin-right: 5px;
+}
+
+.raise {
+    font-size: 10px;
+    color: limegreen;
+}
+
+.graph {
+    width: 300px;
 }
