Slight Frontend updates

--- a/gps-react-app/src/styles/ContentCreator/MyAppsPage/MyAppsPage.css
+++ b/gps-react-app/src/styles/ContentCreator/MyAppsPage/MyAppsPage.css
@@ -96,7 +96,8 @@ select {
 }
 
 .loading-apps {
-    height: 100px;
+    margin-top: 47px;
+    height:70px;
     display: block;
     margin-left: auto;
     margin-right: auto;
