--- a/gps-react-app/src/styles/App.css
+++ b/gps-react-app/src/styles/App.css
@@ -8,6 +8,11 @@
     flex-direction: column;
     position: relative;
     min-height: 100vh;
+    background-image: url("../images/background.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
 }
 
 .Body {
@@ -28,8 +33,8 @@ a {
 /* Header */
 .Nav {
     overflow: hidden;
-    background-color: black;
     position: fixed;
+    background:rgba(0,0,0,.8);
     height: 44px;
     top: 0;
     left: 0;
@@ -40,6 +45,8 @@ a {
     align-items: center;
     transition: 0.3s;
     z-index: 99;
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
 }
 
 .NavLogo {
