--- a/gps-react-app/src/styles/ReviewForm.css
+++ b/gps-react-app/src/styles/ReviewForm.css
@@ -22,7 +22,7 @@ input[type="radio"]{
   color: #000;
 }
 
-form {
+.form {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
