--- a/gps-react-app/src/styles/ContentCreator/AnalyticsPage.css
+++ b/gps-react-app/src/styles/ContentCreator/AnalyticsPage.css
@@ -1,5 +1,6 @@
-.analytics-controls {
+.header {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
 }
@@ -8,58 +9,47 @@
     color: black;
     font-size: 40px;
     font-weight: normal;
+    margin: 0;
 }
 
 .add-icon {
     height: 25px;
     margin: 8px 10px 0 15px;
     color: red;
-    transition: 0.3s;
-}
-
-.add-icon:hover, .search-button:hover {
-    opacity: 50%;
-}
-
-.month-dropdown, .year-dropdown {
-    display: grid;
-    grid-template-areas: "select .dropdown-icon";
-    align-items: center;
-    height: 35px;
-    min-width: auto;
-    margin: 8px 0 0 10px;
-    border: 1px solid lightgrey;
-    border-radius: 50px;
-    background-color: red;
-    padding: 0 15px;
-    font-size: 15px;
-    cursor: pointer;
-    line-height: 1.1;
-}
-
-option {
-    appearance: none;
-    background-color: transparent;
-    border: none;
-    margin: 0;
-    height: 35px;
-    width: 100%;
-    font-size: inherit;
-    color: black;
-    cursor: inherit;
-    line-height: inherit;
-    outline: none;
-}
-
-.dropdown-icon {
-    grid-area: dropdown-icon;
-    color: white;
-    padding-left: 10px;
+    transition: .3s;
 }
 
 .analytics hr {
     border: 0.5px solid lightgrey;
-    margin: 15px 0;
+    margin:  15px 0;
+}
+
+.analytics .analytics-line {
+    margin: 0 0 15px 0;
+}
+
+.header label:nth-child(2) {
+    margin-left: auto;
+    margin-right: 10px;
+}
+
+.header label {
+    cursor: pointer;
+    transition: .3s;
+    background-color: #f2f2f2;
+    padding: 10px 15px;
+    margin-bottom: 15px;
+    border: 1px solid lightgrey;
+    border-radius: 20px;
+}
+
+.header label:hover {
+    opacity: 75%;
+}
+
+.header input {
+    display: inline-block;
+    margin-right: 5px;
 }
 
 .app-downloads {
